[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/roboto/Roboto-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/roboto/Roboto-BoldItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/GUI/game_hud/score/score.gd" type="Script" id=5]
[ext_resource path="res://assets/GUI/game_hud/score/infoscore.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 54
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[node name="Score" type="MarginContainer"]
anchor_left = 0.01
anchor_right = 0.407
anchor_bottom = 0.384
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vertical" type="VBoxContainer" parent="."]
margin_right = 762.0
margin_bottom = 414.0
grow_horizontal = 2
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score" type="HBoxContainer" parent="vertical"]
margin_right = 762.0
margin_bottom = 60.0
grow_vertical = 2
rect_min_size = Vector2( 406, 60 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="title" type="RichTextLabel" parent="vertical/Score"]
margin_right = 762.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]SCORE[/b]"
text = "SCORE"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l_score" type="RichTextLabel" parent="vertical/Score/title"]
margin_left = 188.0
margin_right = 373.0
margin_bottom = 62.0
grow_horizontal = 0
size_flags_stretch_ratio = 0.5
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[right][i]0[/i][/right]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="HBoxContainer" parent="vertical"]
visible = false
margin_top = 64.0
margin_right = 762.0
margin_bottom = 104.0
rect_min_size = Vector2( 406, 40 )
size_flags_stretch_ratio = 0.22
script = ExtResource( 6 )

[node name="Label" type="Label" parent="vertical/jump"]
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0
text = "     "

[node name="title" type="RichTextLabel" parent="vertical/jump"]
margin_left = 24.0
margin_right = 762.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
bbcode_enabled = true
bbcode_text = "[i]Jump!![/i]"
text = "Jump!!"
scroll_active = false

[node name="l_add_score" type="RichTextLabel" parent="vertical/jump/title"]
margin_left = 193.0
margin_right = 340.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[i][right]0[/right][/i]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverTake" type="HBoxContainer" parent="vertical"]
visible = false
margin_top = 64.0
margin_right = 762.0
margin_bottom = 104.0
rect_min_size = Vector2( 406, 40 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="vertical/OverTake"]
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0
text = "     "

[node name="title" type="RichTextLabel" parent="vertical/OverTake"]
margin_left = 24.0
margin_right = 762.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
bbcode_enabled = true
bbcode_text = "[i]Overtake!![/i]"
text = "Overtake!!"
scroll_active = false

[node name="l_add_score" type="RichTextLabel" parent="vertical/OverTake/title"]
margin_left = 193.0
margin_right = 340.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[i][right]0[/right][/i]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverCar" type="HBoxContainer" parent="vertical"]
visible = false
margin_top = 64.0
margin_right = 762.0
margin_bottom = 104.0
rect_min_size = Vector2( 406, 40 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="vertical/OverCar"]
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0
text = "     "

[node name="title" type="RichTextLabel" parent="vertical/OverCar"]
margin_left = 24.0
margin_right = 762.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
bbcode_enabled = true
bbcode_text = "[i]Over Car!![/i]"
text = "Over Car!!"
scroll_active = false

[node name="l_add_score" type="RichTextLabel" parent="vertical/OverCar/title"]
margin_left = 193.0
margin_right = 340.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[i][right]0[/right][/i]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkpoint" type="HBoxContainer" parent="vertical"]
visible = false
margin_top = 64.0
margin_right = 762.0
margin_bottom = 104.0
rect_min_size = Vector2( 406, 40 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="vertical/Checkpoint"]
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0
text = "     "

[node name="title" type="RichTextLabel" parent="vertical/Checkpoint"]
margin_left = 24.0
margin_right = 762.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
bbcode_enabled = true
bbcode_text = "[i]Checkpoint !![/i]"
text = "Checkpoint !!"
scroll_active = false

[node name="l_add_score" type="RichTextLabel" parent="vertical/Checkpoint/title"]
margin_left = 193.0
margin_right = 340.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.968627, 0.909804, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[i][right]0[/right][/i]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
